Fix css transitions on iOS

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -303,11 +303,13 @@ a:active {
 }
 
 .site-header a{
-   -webkit-transition: all 0.2s ease-out;
+  -webkit-transform: translateZ(0);
+  -webkit-transition: all 0.2s ease-out;
   -moz-transition: all 0.2s ease-out;
   -ms-transition: all 0.2s ease-out;
   -o-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
+
 }
 
 .site-header a:hover{
